# ecommerce

./: pyproject.toml  run.sh
shopping/: settings.py  urls.py
store/: admin.py  apps.py  models.py  receivers.py  serializers.py  signals.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_product_inventory.py  0003_alter_collection_name_and_more.py  0004_cart_cartitem.py  0005_cart_user.py  0006_alter_cart_user.py  0007_alter_cart_user.py  0008_alter_cartitem_product.py  0009_remove_cartitem_price.py  0010_alter_cartitem_unique_together.py  0011_order_orderitem.py  0012_remove_orderitem_price.py
