[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Dilip Kumar Sharma <diliplakshya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djoser = "^2.2.0"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
drf-nested-routers = "^0.93.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
